--- a/Exercicios/Ex002/index.html
+++ b/Exercicios/Ex002/index.html
@@ -11,6 +11,21 @@
     <hr>
     <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt; </p>
     <p>Se precisar quebrar o texto em algum lugar específico <br>como esse, você pode usar tag &lt;br&gt;.</p>
+    <p>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+        &uparrow;
+    </p>
+    <p>Vamos adicionar alguns emoji:
+        &#x1F596;
+        &#x1F913;
+    </p>
     
 </body>
 </html>
