--- a/Exercicios/ex008/index.html
+++ b/Exercicios/ex008/index.html
@@ -24,7 +24,7 @@
     <p>Podemos criar também <mark>um texto marcado</mark> usando a tag MARK.</p>
     <p>E no outro parágrafo, temos <mark>outro texto marcado</mark> no final.</p>
     <h2>Texto grande e pequeno</h2>
-    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo.</p>
+    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo.</p> <!--Big esta obsoleto-->
     <h2>Texto deletado</h2>
     <p>Podemos marcar <del>um texto como excluído</del> para indicar que ele deve ser lido, mas não considerado.</p>
     <h2>Texto inserido</h2>
@@ -34,6 +34,6 @@
     <p>Para inserir coisas do tipo x<sup>20</sup>+3 </p>
     <h2>Texto Subscrito</h2>
     <p>Para inserir coisas do tipo H<sub>2</sub>O</p>
-    
+
 </body>
 </html>
