--- a/Exercicios/ex010/index.html
+++ b/Exercicios/ex010/index.html
@@ -10,5 +10,8 @@
     <h1>Usando Links externos</h1>
     <p>Você pode acessar o meu <a href="https://github.com/OJuauum" target="_blank" rel="external">repositório público no GitHub</a></p>
     <p>Você também pode <a href="https://instagram.com/ojuauum" target="_blank" rel="external">acessar o meu instagram</a></p>
+    <h2>Usando links internos</h2>
+    <p>Esta é a primeira página do site. Se você quiser, pode acessar também a minha <a href="Pag002.html" rel="next" target="_self">Segunda página</a></p>
+    <p>Você pode acessar a nossa <a href="noticias/pag003.html" rel="next" target="_self">página de notícias</a></p>
 </body>
 </html> 
