--- a/Desafio/Modulo-01/d009/hardware.html
+++ b/Desafio/Modulo-01/d009/hardware.html
@@ -17,6 +17,8 @@
     <h1>Curso de Hardware</h1>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/iT6E92Kt38o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br>
+    <a href="https://www.youtube.com/watch?v=iT6E92Kt38o&list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW&pp=iAQB" target="_blank" rel="external">Veja o curso completo</a>
     <hr>
 
     <a href="../d009/index.html"><img src="imagens/voltar.png" alt="voltar"></a>
