--- a/Desafio/Modulo-01/d009/html.html
+++ b/Desafio/Modulo-01/d009/html.html
@@ -17,6 +17,8 @@
     <h1>Curso de HTML</h1>
     
     <iframe width="560" height="315" src="https://www.youtube.com/embed/rsFCVjr5yxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br>
+    <a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&pp=iAQB" target="_blank" rel="external">Veja o curso completo</a>
     <hr>
     <a href="../d009/index.html"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
