--- a/Desafio/Modulo-01/d009/python.html
+++ b/Desafio/Modulo-01/d009/python.html
@@ -16,6 +16,8 @@
 <body>
     <h1>Curso de Python</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br>
+    <a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6&pp=iAQB" target="_blank" rel="external">Veja o curso completo</a>
     <hr>
     
     <a href="../d009/index.html"><img src="imagens/voltar.png" alt="Voltar"></a>
