--- a/Exercicios/modulo-01/ex013/index.html
+++ b/Exercicios/modulo-01/ex013/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Estilos Inline</title>
 </head>
-<body>
+<body style="background-color: lightskyblue; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
+    <h1 style="color:mediumblue; font-size: 1.5em;">Capítulo 1</h1>
+    <h2 style="color: darkred; font-size: 1.2em;">Capítulo 1.1</h2>
+    <p style="text-align: justify;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet repellat nihil dolores tempora delectus rerum sunt, voluptatibus sint nulla maxime est, illum quod, doloremque animi ratione! Aspernatur sunt soluta deserunt?</p>   
+    <h2>capítulo 1.2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium iusto beatae consequuntur aperiam neque esse perferendis quae expedita! Accusantium velit quia beatae veniam at iste aperiam minus voluptas, commodi blanditiis!</p>
     
+    <h1>Cpítulo 2</h1>
+    <h2>Capítulo 2.1</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt ipsa perspiciatis sed quo, nemo atque corrupti ad, modi maiores quia inventore magni vel similique voluptate ea deleniti nulla. A, doloremque!</p>
 </body>
 </html>
