--- a/Exercicios/modulo-02/ex017/fonte01.html
+++ b/Exercicios/modulo-02/ex017/fonte01.html
@@ -8,11 +8,20 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            /* 
+            Medidas absolutas
+            cm, mm, in (polegada), px, pt, pc (paica) 
+
+            Medidas Relativas
+            em, ex, rem, vw, vh, %
+
+            Usar o px ou em
+            16px é o tamanho padrão da fonte
+            16px geralmente = 1em
+            */
+            font-size: 1em;
         }
 
-        h1, h2 {
-            font-family: 'Times New Roman', Times, serif;
-        }
     </style>
 </head>
 <body>
