--- a/Exercicios/modulo-02/ex017/fonte01.html
+++ b/Exercicios/modulo-02/ex017/fonte01.html
@@ -22,6 +22,23 @@
             font-size: 1em;
         }
 
+        h1 {
+            
+            /* shorthand font
+            
+            font-family: 'Work Sans', sans-serif;
+            font-weight: bolder;
+            font-size: 3em;
+            font-style: italic;
+
+            - Font-style -> font-weight -> font-size -> font-family */
+            font: italic bold 3em 'Work Sans', sans-serif;
+        }
+
+        h2 {
+            font: bold 2em 'Work Sans'
+        }
+
     </style>
 </head>
 <body>
