--- a/Exercicios/modulo-02/ex021/caixa02.html
+++ b/Exercicios/modulo-02/ex021/caixa02.html
@@ -4,7 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grouping Tags</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: dimgray;
+    }   
+
+    header {
+        background-color: white;
+        padding: 10px;
+        margin: 10px;
+    }
+
+    nav {
+        background-color: rgb(97, 97, 97);
+        padding: 3px;
+    }
+
+    nav > a {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        margin-right: 30px;
+    }
+
+    nav > a:hover {
+        text-decoration: underline;
+    }
+
+    main {
+        background-color: white;
+        padding: 10px;
+        margin: 10px;
+    }
+
+    article {
+        background-color: lightgrey;
+        padding: 5px;
+    }
+
+    article > aside {
+        background-color: rgb(155, 155, 155);
+    }
+
+    footer {
+        background-color: black;
+        color: white;
+        text-align: center;
+        padding: 1px;
+        margin: 0px;
+    }
+    </style>
 </head>
 <body>
     <header>
