--- a/Exercicios/modulo-02/ex021/caixa02.html
+++ b/Exercicios/modulo-02/ex021/caixa02.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grouping Tags</title>
     <style>
-        
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: dimgray;
@@ -20,6 +19,7 @@
     nav {
         background-color: rgb(97, 97, 97);
         padding: 3px;
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.815);
     }
 
     nav > a {
@@ -53,6 +53,10 @@
         color: white;
         text-align: center;
         padding: 1px;
+        margin: 0px;
+    }
+
+    footer > p {
         margin: 0px;
     }
     </style>
