--- a/Exercicios/modulo-02/ex021/caixa02.html
+++ b/Exercicios/modulo-02/ex021/caixa02.html
@@ -37,6 +37,7 @@
         background-color: white;
         padding: 10px;
         margin: 10px;
+        border-radius: 10px 30px;
     }
 
     article {
