--- a/Desafio/modulo-02/d010/index.html
+++ b/Desafio/modulo-02/d010/index.html
@@ -14,8 +14,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="#">Notícias</a>
-            <a href="#">Curiosidades</a>
-            <a href="#">Fale Conosco</a>
+            <a href="#">Contato</a>
         </nav>
     </header>
     <main>
@@ -23,10 +22,10 @@
         <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
         <h2>A primeira versão</h2>
-        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+        <p class>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
         
         <picture>
-            <source media="(max-width: 800px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+            <source media="(max-width: 850px)" srcset="imagens/dan-droids-pq.png" type="image/png">
             <img src="imagens/dan-droids.png" alt="Primeira versão">
         </picture>
 
@@ -37,7 +36,7 @@
         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
         <picture>
-            <source media="(max-width: 800px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
+            <source media="(max-width: 850px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
             <img src="imagens/irina-blok.jpg" alt="Foto da ilustradora">
         </picture>
 
