--- a/Exercicios/modulo-03/ex022/fundo006.html
+++ b/Exercicios/modulo-03/ex022/fundo006.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /*  Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center top no-repeat  fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +36,9 @@
     <main>
         <h1>Test de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem est mollitia odit enim fuga aliquam aperiam voluptatem saepe quia eum vitae exercitationem debitis sit repellat molestias, dolores, ducimus adipisci odio? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias reiciendis laborum inventore expedita repellat, sequi quibusdam quidem rerum quod aperiam eaque magni in facere deserunt eius mollitia nostrum. Praesentium, explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum omnis perferendis odio maiores tempore tempora consequatur. Cum sint praesentium officiis rem. Tenetur sunt reprehenderit fugit a aliquid inventore provident dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias sapiente ad consequuntur non ratione obcaecati! Illum a facere culpa sint dolor dicta, nihil officiis delectus voluptatem et soluta laborum sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet minima laudantium, tenetur numquam consequuntur hic, vitae sequi repudiandae saepe officia repellendus maiores porro culpa ex impedit animi, nisi fugiat molestiae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, ipsa sed? Doloremque possimus placeat excepturi consequuntur animi itaque, molestias quaerat debitis autem fuga ducimus natus ex delectus iure asperiores error.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dignissimos consequuntur sapiente ex quidem reprehenderit maxime maiores optio tempore libero illum asperiores cum minus doloribus, voluptatem aliquam. Fugit, atque nulla? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloremque atque aspernatur maxime inventore dicta commodi, ullam deleniti quisquam. Exercitationem incidunt libero dolores ea ex ad amet autem quidem inventore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus sequi impedit rerum voluptates repudiandae quas illo, eum, hic, alias commodi sed delectus odit optio. Expedita, error vel! Dolorum, porro rem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis modi ut debitis minima doloribus autem. Voluptatum, nisi excepturi obcaecati libero sint ducimus nesciunt, assumenda praesentium facilis illum, quis accusamus rerum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto facilis sit neque enim, rerum reprehenderit ipsam porro illum alias mollitia ipsum esse nisi voluptatem? Omnis id est quaerat rem qui!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi aspernatur perferendis ipsam laborum quidem minima. Quos hic laborum placeat, dicta rerum quod doloribus accusamus minima illo quia quaerat esse voluptates! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime voluptates temporibus ullam dolore repudiandae eum optio eaque reiciendis quae? Voluptas accusantium nesciunt sapiente asperiores id quibusdam tempora quisquam veniam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore qui reprehenderit illum aut iure perspiciatis hic magnam ipsa, minima praesentium sit sed sint debitis sequi dolorum unde libero! Quisquam? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo maxime, facilis officia aut error pariatur dolor quia omnis aperiam! Veritatis, ex quod? Tempora maiores sapiente dignissimos similique consequuntur at earum?</p>
     </main>
 </body>
 </html>
