--- a/Desafio/modulo-02/d012/index.html
+++ b/Desafio/modulo-02/d012/index.html
@@ -19,7 +19,8 @@
                 Mensagem curta e fria <br>
                 Twitter e Facebook <br>
                 Antes que eu caduque <br>
-                Vou dizer tudo em poesia. <br></p>
+                Vou dizer tudo em poesia. <br>
+            </p>
         </section>
         <section class="imagem" id="img01">
             <p>Não é mais como era antes <br>
@@ -28,7 +29,8 @@
                 O "O" e o "E" foi riscado <br>
                 Para declarar o amor <br>
                 Basta botar uma flor <br>
-                E um coração desenhado. <br></p>
+                E um coração desenhado. <br>
+            </p>
         </section>
         <section>
             <p>Arroba agora não pesa <br>
@@ -37,7 +39,8 @@
                 Ou vai até no começo <br>
                 Agora é .com <br>
                 Se o saite é muito bom <br>
-                Ele vale um alto preço. <br></p>
+                Ele vale um alto preço. <br>
+            </p>
 
             <p>Pra piorar a liguagem <br>
                 O emoticom é um risco <br>
@@ -45,7 +48,8 @@
                 Ponto e vírgula e um asterisco <br>
                 Um beijo significa <br>
                 Pra entender como fica <br>
-                Decifre esse rabisco. <br></p>
+                Decifre esse rabisco. <br>
+            </p>
         </section>
         <section class="imagem" id="img02">
             <p>Tenho saudade das cartas <br>
@@ -54,7 +58,8 @@
                 Só chegava no Verão <br>
                 Mas matava a saudade <br>
                 Era texto de verdade <br>
-                Nas linhas do coração. <br></p>
+                Nas linhas do coração. <br>
+            </p>
         </section>
         <section>
             <p>Agora, escrevo e envio <br>
@@ -63,7 +68,8 @@
                 A pessoa foi embora <br>
                 Abriu outro aplicativo <br>
                 O mundo ficou cativo <br>
-                Da tecnologia do agora. <br></p>
+                Da tecnologia do agora. <br>
+            </p>
 
             <p>Felizmente, pra orar <br>
                 Não precisa de internet <br>
@@ -71,11 +77,13 @@
                 Se quiser, faça esse teste <br>
                 Dois pontos são dois joelhos <br>
                 Seus lábios são aparelhos <br>
-                Deixe que Deus interprete. <br></p>
+                Deixe que Deus interprete. <br>
+            </p>
         </section>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="#" target="_blank">OJuauum</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
+
 </html>
