--- a/Desafio/modulo-02/d010a/index.html
+++ b/Desafio/modulo-02/d010a/index.html
@@ -83,7 +83,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
+        <p>Site criado por OJuauum para o CursoemVideo.</p>
     </footer>
 </body>
 </html>
