--- a/Desafio/modulo-02/d012/index.html
+++ b/Desafio/modulo-02/d012/index.html
@@ -13,7 +13,8 @@
     </header>
     <main>
         <section>
-            <p>Estou ficando cansado <br>
+            <p>
+                Estou ficando cansado <br>
                 Da tal tecnologia <br>
                 Só se fala por e-mail <br>
                 Mensagem curta e fria <br>
@@ -22,8 +23,10 @@
                 Vou dizer tudo em poesia. <br>
             </p>
         </section>
+
         <section class="imagem" id="img01">
-            <p>Não é mais como era antes <br>
+            <p>
+                Não é mais como era antes <br>
                 É tudo abreviado <br>
                 "Você" só tem duas letras <br>
                 O "O" e o "E" foi riscado <br>
@@ -32,8 +35,10 @@
                 E um coração desenhado. <br>
             </p>
         </section>
+
         <section>
-            <p>Arroba agora não pesa <br>
+            <p>
+                Arroba agora não pesa <br>
                 É parte de um endereço <br>
                 Ponto final nem se usa <br>
                 Ou vai até no começo <br>
@@ -42,7 +47,8 @@
                 Ele vale um alto preço. <br>
             </p>
 
-            <p>Pra piorar a liguagem <br>
+            <p>
+                Pra piorar a liguagem <br>
                 O emoticom é um risco <br>
                 Tem símbolo para tudo <br>
                 Ponto e vírgula e um asterisco <br>
@@ -51,8 +57,10 @@
                 Decifre esse rabisco. <br>
             </p>
         </section>
+
         <section class="imagem" id="img02">
-            <p>Tenho saudade das cartas <br>
+            <p>
+                Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
                 Mandava no mês de Junho <br>
                 Só chegava no Verão <br>
@@ -61,8 +69,10 @@
                 Nas linhas do coração. <br>
             </p>
         </section>
+        
         <section>
-            <p>Agora, escrevo e envio <br>
+            <p>
+                Agora, escrevo e envio <br>
                 Chegando na mesma hora <br>
                 Mas quando vou prosear <br>
                 A pessoa foi embora <br>
@@ -71,7 +81,8 @@
                 Da tecnologia do agora. <br>
             </p>
 
-            <p>Felizmente, pra orar <br>
+            <p>
+                Felizmente, pra orar <br>
                 Não precisa de internet <br>
                 Deus escuta todo mundo <br>
                 Se quiser, faça esse teste <br>
