--- a/Exercicios/modulo-03/ex023/tabela004.html
+++ b/Exercicios/modulo-03/ex023/tabela004.html
@@ -4,66 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            width: 600px;
+        }
+
+        caption {
+            font-size: 1.5em;
+            padding: 10px;
+            font-weight: bold;
+        }
+
+        td, th {
+            border: 1px solid black;
+            padding: 5px;
+        }
+    </style>
 </head>
 <body>
     <h1>Exercício de Tabelas</h1>
     <table>
+        <caption>Filmes Favoritos</caption>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nome</th>
-                <th>Filme</th>
-                <th></th>
-                <th></th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nome</th>
+                <th colspan="3" scope="colgroup">Filme</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
                 <td>Vingadores</td>
             </tr>
             <tr>
-                <th>Mulheres</th>
                 <td>Beatriz Souza</td>
                 <td>Hulk</td>
                 <td>Inception</td>
                 <td>Batman</td>
             </tr>
             <tr>
-                <th>Mulheres</th>
                 <td>Cládia Melo</td>
                 <td>Oblivion</td>
                 <td>Matrix</td>
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th>Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
                 <td>Gladiador</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Daniel Lourenço</td>
+                <td>Wall-E</td>
+                <td>Oldboy</td>
+                <td>Dangal</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Fabiano Mota</td>
+                <td>Star Wars 5</td>
+                <td>Taxi Driver</td>
+                <td>Toy Story</td>
             </tr>
         </tbody>
-        <tfoot>
-
-        </tfoot>
     </table>
 </body>
 </html>
