--- a/Exercicios/modulo-03/ex023/tabela005.html
+++ b/Exercicios/modulo-03/ex023/tabela005.html
@@ -29,7 +29,7 @@
             background-color: chartreuse;
         }
 
-        col.csexo {
+        col.cgrupo {
             background-color:yellow ;
         }
     </style>
